Fazendo upload das alterações

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Conteúdo Principal -->
     <div class="container text-center mt-5">
-        <h1>Bem-vindo ao Sistema de Gerenciamento de Usuários</h1>
+        <h1>Bem-vindo ao Sistema de Gerenciamento de Produtos</h1>
         <p>Use o menu acima para navegar pelo sistema.</p>
     </div>
 
